# Dashboard_Credit

./: .gitignore  README.md  Taskfile.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: lint-flask.yml  lint-streamlit.yml  lint-test.yaml  lint.yml  tests-flask.yml  tests-streamlit.yml  tests.yml
client/: main.py
client/tools/: __init__.py  dashboard_functions.py  display_pages.py
flask_api/: Dockerfile  Taskfile.yaml  app.py  pyproject.toml
flask_api/tests/: test_app.py
flask_api/utils/: __init__.py  controllers.py  preprocess.py
model_ml/notebooks/: Guessoum_Adnene_4_presentation_082022.odp  P7_Exploratory_data_analysis.ipynb  P7_Feature_engineering_selection.ipynb  P7_Model_selection.ipynb  P7_SHAP_feature_importance.ipynb  analysis_functions.py
streamlit_app/: Dockerfile  Taskfile.yaml  dashboard.py  helper.ipynb  main.py  pyproject.toml
streamlit_app/src/: main.py
streamlit_app/src/tools/: dashboard_functions.py
streamlit_app/tests/: test_main.py  test_navigation.py
streamlit_app/tools/: __init__.py  dashboard_functions.py  utils.py
