[tool.poetry]
name = "dashboard-credit"
version = "0.1.0"
description = "Dashboard prédiction de défaut de crédit"
authors = ["Adnene Guessoum <adnen.guessoum@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dashboard_credit"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
streamlit = "^1.22.0"
pandas-stubs = "^2.0.1.230501"
streamlit-option-menu = "^0.3.4"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
plotly = "^5.14.1"
scikit-learn = "^1.2.2"
shap = "^0.41.0"
ipython = "^8.13.2"
xgboost = "^1.7.5"
pandas = "^2.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pylint = "^2.15.5"
black = "^22.10.0"
mypy = "^0.982"
pytest = "^7.2.0"
mkdocs = "^1.4.1"
mkdocs-material = "^8.5.7"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
pytest-cov = "^4.0.0"
mkdocs-coverage = "^0.2.5"
git-changelog = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100
