[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = "streamlit app of Dashboard ML project"
authors = ["Adnene Guessoum <adnen.guessoum@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "streamlit_app"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.24.0"
streamlit-option-menu = "^0.3.6"
matplotlib = "^3.7.1"
plotly = "^5.15.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
ipython = "^8.14.0"
numpy = "1.23"
xgboost = "^1.7.6"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.3.0"
flake8 = "^6.0.0"
pylint = "^2.17.4"
pytest = "^7.4.0"
data-science-types = "^0.2.23"
pip = "^23.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
